--- a/limit-services/src/main/resources/bootstrap.properties
+++ b/limit-services/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.application.name=limits-service
 server.port=8080
-spring.profiles.active=dev
+spring.profiles.active=qa
 #To tell where the spring cloud configuration server is?/which url can be used to talk S.C.C.S
 spring.cloud.config.uri=http://localhost:8888
 
